Se creo el endpoint de reportes y las pruebas del front